syntax = "proto3";

package messari.sol_token.v1;

message Transfers {
  repeated Transfer transfers = 1;
}

message Transfer {
  string signature = 1;
  string from = 2;
  string to = 3;
  TokenAccount token = 4;
  string mint = 5;
  uint64 native_amount = 6;
  uint64 amount = 7;
  BalanceChanges balance_changes = 8;
}

message BalanceChanges {
  repeated TokenBalance items = 1;
}

// balance change
message TokenBalance {
  TokenAccount token = 1;
  string transaction_id = 2;
  uint64 block_height = 3;
  string address = 4; // account address of the balance change
  string pre_balance = 5; // BigInt, in token's native amount
  string post_balance = 6; // BigInt, in token's native amount
}

message Tokens {
  repeated TokenAccount tokens = 1;
}

message TokenAccount {
  string address = 1;
  string name = 2;
  string symbol = 3;
  uint64 decimals = 4;
  string freeze_authority = 5;
  string mint_authority = 6;
  string tx_created = 7;
  uint64 block_created = 8;
}
